--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.0.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.17",
+    "less": "^4.1.3",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
@@ -27,7 +30,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
-    "lint-staged": "^11.1.2"
+    "lint-staged": "^11.1.2",
+    "vue-lazyload": "^3.0.0-rc.2"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
